--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
         <header class="app-header">
             <div class="header-content">
                 <a href="{{ url_for('get_data') }}">
-                    <img src="{{ url_for('static', filename='mlogo.svg') }}" alt="Logo" class="app-logo" style="height: 40px;">
+                    <img src="{{ url_for('static', filename='mlogo.svg') }}" alt="Logo" class="app-logo" style="height: 40px;margin-top: 5px;">
                 </a>
                 <nav class="app-nav">
                     <a href="{{ url_for('dashboard') }}" class="nav-link">
