--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -128,7 +128,9 @@ new Chart(cpuCtx, {
                             data: data.ram_data,
                             backgroundColor: [
                                 '#EC4899', '#0EA5E9', '#F97316', '#6366F1',
-                                '#F43F5E', '#8B5CF6'
+                                '#F43F5E', '#8B5CF6', '#F59E0B', '#10B981',
+                                '#3B82F6', '#EAB308', '#A21CAF', '#BE185D',
+                                '#22D3EE', '#F472B6', '#34D399', '#FBBF24'
                             ],
                             borderWidth: 0,
                             hoverOffset: 10
