--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -47,7 +47,7 @@ body {
 }
 
 .header-content {
-    max-width: 1200px;
+    max-width: 1300px;
     margin: 0 auto;
     padding: 0.2rem 2rem;
     display: flex;
@@ -93,7 +93,7 @@ body {
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 1300px;
     margin: 0 auto;
     padding: 0 2rem;
 }
@@ -160,6 +160,7 @@ body {
 
 .stat-card:hover {
     transform: translateY(-3px);
+    box-shadow: 0 10px 15px -3px rgba(99, 101, 241, 0.600), 0 4px 6px -2px rgba(99, 102, 241, 0.600);
 }
 
 .stat-icon {
@@ -262,7 +263,7 @@ body {
 
 .machine-card:hover {
     transform: translateY(-3px);
-    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 10px 15px -3px rgba(99, 101, 241, 0.705), 0 4px 6px -2px rgba(99, 102, 241, 0.706);
 }
 
 .machine-header {
@@ -474,7 +475,7 @@ body {
 
 /* Machine Details Specific Styles */
 .machine-details-container {
-    max-width: 1200px;
+    max-width: 1500px;
     margin: 0 auto;
     padding: 20px;
 }
@@ -492,7 +493,7 @@ body {
 }
 
 .status {
-    padding: 0.25rem 0.75rem;
+    padding: 0.25rem 0.6rem;
     border-radius: 1rem;
     font-size: 0.75rem;
     font-weight: 600;
@@ -624,9 +625,8 @@ th {
 
 /* Search Page Styles */
 .search-container {
-    max-width: 1200px;
+    max-width: 1500px;
     margin: 0 auto;
-    padding: 20px;
 }
 
 .search-header {
@@ -676,20 +676,21 @@ th {
 }
 
 .machine-table {
-    width: 100%;
+    width: 1500px;
+    max-width: 100%;
     border-collapse: collapse;
-    table-layout: fixed;
+    table-layout: auto;
 }
 
 .machine-table th {
     background: var(--light);
-    padding: 1rem;
+    /*padding: 1rem;*/
     font-weight: 600;
     color: var(--dark-gray);
     text-transform: uppercase;
     font-size: 0.75rem;
-    letter-spacing: 0.05em;
-    text-align: left;
+    letter-spacing: 0.02em;
+    text-align: center;
 }
 
 .machine-table td {
